@@ -1,6 +1,6 @@
 {
   "name": "brave-new-oarc",
-  "version": "4.2.58",
+  "version": "4.2.59",
   "factorio_version": "1.1",
   "title": "Brave New OARC Scenario",
   "author": "JustGoFly + Oarcinae + canidae",
